2006-07-19  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm-watchable-app.c: Use the newly defined
	  "X-Text-Domain" to translate the launch banner as well

2006-07-19  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.[ch]: Added new X-Text-Domain optional
	  field to fetch L10n from other domains than m-a-d (Closes NB#35248)
	* hildon-navigator/others-menu.[ch]: 
	  - Use this field if present to translate the name of entries.
	  - Properly translate the second line for folders

2006-07-18  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-home/screenshot.h: Removed unnecesary repeated code.

2006-07-18  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/others-menu.c: Removed legacy "toggle" handler,
	  we now handle the button_press directly (Closes NB#35186)

2006-07-18  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Thumbnail view missing for application switcher menu"
	(Closes NB#34591)
	* hildon-navigator/hn-app-switcher.c: toggle the button on a 
	  button8 press or a global key shortcut

2006-07-17  Johan Bilien <johan.bilien@nokia.com>
	
	* hildon-navigator/hn-app-switcher.c: fixed another potential invalid
	  read reported by valgrind

2006-07-17  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c: fixed a potential invalid
	  read reported by valgrind

2006-07-17  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.13

2006-07-17  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c:
	  - added CHANGED_STACK signal to handle notifications from MB
	    about changes in the window stack order
	* hildon-navigator/hn-app-button.c:
	  - untoggle the button after a click and wait for changes in the window
	    stack to avoid AS and window stack not being synchronized

2006-07-14  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-home/home-select-applets-dialog.c:
	  - select_applets_selected(): fixed memory leak